kube/demo-nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dscott-app1
---
apiVersion: v1
kind: Namespace
metadata:
  name: dscott-app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: dscott-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: dscott-app1
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: echoserver
  name: echo-service
  namespace: dscott-app1
spec:
  ingressClassName: nginx-main
  rules:
    - host: test.mydomain.com
      http:
        paths:
          - backend:
              service:
                name: echo-service
                port:
                  number: 80
            path: /
            pathType: Exact
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: dscott-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: dscott-app2
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: echoserver
  name: echo-service
  namespace: dscott-app2
spec:
  ingressClassName: nginx-canary
  rules:
    - host: test.mydomain.com
      http:
        paths:
          - backend:
              service:
                name: echo-service
                port:
                  number: 80
            path: /
            pathType: Exact
