kube/demo-target-ip.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app1
---
apiVersion: v1
kind: Namespace
metadata:
  name: app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: app1
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: echoserver
  name: echo-service
  namespace: app1
  annotations:
    alb.ingress.kubernetes.io/scheme: 'internet-facing'
    alb.ingress.kubernetes.io/target-type: 'ip'
spec:
  ingressClassName: alb
  rules:
    - host: app.apps.dscott.sugn.p1.openshiftapps.com
      http:
        paths:
          - backend:
              service:
                name: echo-service
                port:
                  number: 80
            path: /
            pathType: Exact
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: app2
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: echoserver
  name: echo-service
  namespace: app2
  annotations:
    alb.ingress.kubernetes.io/scheme: 'internet-facing'
    alb.ingress.kubernetes.io/target-type: 'ip'
spec:
  ingressClassName: alb
  rules:
    - host: app.apps.dscott.sugn.p1.openshiftapps.com
      http:
        paths:
          - backend:
              service:
                name: echo-service
                port:
                  number: 80
            path: /
            pathType: Exact
