kube/demo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app1
---
apiVersion: v1
kind: Namespace
metadata:
  name: app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: app1
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: echoserver
  name: echo-service
  namespace: app1
spec:
  host: apps.dscott.d2do.p1.openshiftapps.com
  path: /
  port:
    targetPort: 80
  to:
    kind: Service
    name: echo-service
    weight: 100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: app2
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: echoserver
  name: echo-service
  namespace: app2
spec:
  host: apps.dscott.d2do.p1.openshiftapps.com
  path: /
  port:
    targetPort: 80
  to:
    kind: Service
    name: echo-service
    weight: 100
